--- a/src/components/Products/ProductListItem.scss
+++ b/src/components/Products/ProductListItem.scss
@@ -22,7 +22,7 @@
     text-align: center;
     img {
         width: 150px;
-        height: auto;
+        height: 180px;
     }
 }
 .product-quantity {
